added failed experiments, found flaw

--- a/TodoExperiments.ipynb
+++ b/TodoExperiments.ipynb
@@ -268,6 +268,80 @@
     "    for amount in amountList:\n",
     "        featureRemoving(did,cv,round(amount*(readDict(did)['NumberOfFeatures']-1)),typ)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func = 'cvScoreFeatures6'\n",
+    "amountList = [0.25,0.5,0.75,1.0]\n",
+    "from LocalDatasets import readDict,checkForExist\n",
+    "from completeRun import featureClf\n",
+    "NonCat = [1038,1043,1046,1049,1050,1063,1067,1068,1176,11,12,1459,1462,1464,1466,1467,1468,1475,1476,1478,1479,1485,1487]\n",
+    "second = [1489, 1491, 1492, 1493, 1494, 1497, 14, 1501, 1504, 1510, 1515, 1570, 16, 18, 22, 28, 300, 30, 32, 36, 375, 37, 39,40499,40509,40, 4134, 41, 44, 4538, 458, 53, 54]\n",
+    "for i in second:\n",
+    "    NonCat.append(i)\n",
+    "didList = NonCat\n",
+    "listTuples = []\n",
+    "for did in didList:\n",
+    "    for amount in amountList:\n",
+    "        if not checkForExist(func,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))):\n",
+    "            listTuples.append((did,amount))\n",
+    "typ = 4\n",
+    "cv = 10\n",
+    "for did,amount in listTuples:\n",
+    "    featureClf(did,cv,round(amount*(readDict(did)['NumberOfFeatures']-1)),typ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func = 'cvScoreFeatures6'\n",
+    "amountList = [0.25,0.5,0.75,1.0]\n",
+    "from LocalDatasets import readDict,checkForExist\n",
+    "from completeRun import featureClf\n",
+    "Cat = [20, 21, 26, 333, 334, 335,40668, 4135, 4534, 469, 46, 50]\n",
+    "didList = Cat\n",
+    "listTuples = []\n",
+    "for did in didList:\n",
+    "    for amount in amountList:\n",
+    "        if not checkForExist(func,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))):\n",
+    "            listTuples.append((did,amount))\n",
+    "typ = 4\n",
+    "cv = 10\n",
+    "for did,amount in listTuples:\n",
+    "    featureClf(did,cv,round(amount*(readDict(did)['NumberOfFeatures']-1)),typ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6229016948897019 0.6229016948897019\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Noise2 import random_seed\n",
+    "print(random_seed(5),random_seed(5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
