--- a/TodoExperiments.ipynb
+++ b/TodoExperiments.ipynb
@@ -285,6 +285,7 @@
     "    NonCat.append(i)\n",
     "didList = NonCat\n",
     "listTuples = []\n",
+    "clfName = 'SVC-rbf'\n",
     "for did in didList:\n",
     "    for amount in amountList:\n",
     "        if not checkForExist(func,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))):\n",
@@ -308,6 +309,7 @@
     "Cat = [20, 21, 26, 333, 334, 335,40668, 4135, 4534, 469, 46, 50]\n",
     "didList = Cat\n",
     "listTuples = []\n",
+    "clfName = 'SVC-rbf'\n",
     "for did in didList:\n",
     "    for amount in amountList:\n",
     "        if not checkForExist(func,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))):\n",
