--- a/doc/main.tex
+++ b/doc/main.tex
@@ -219,7 +219,7 @@ RandomForestClassifier is an ensemble method of directive trees \cite{RDF}. Duri
 In the scikit-learn library KNeighborsClassifier is an implementation of the k-nearest neighbors classification algorithm(kNN)\cite{KNN}. KNN uses instance-based learning or non-generalizing learning. This means that during fitting no complete model is made but only the given feature set is stored in order of appearing. The k-NN uses as it names tells the nearest neighbors for calculation. For prediction the inputted feature set is traversed to find the nearest  k points. Depending on the majority class of the k neighbors the classification is vote is decided. The default metric for distance measuring is Euclidean distance another option is the Manhattan distance which is less accurate but needs less computing. To find the nearest points an option can be made between a ball tree, a kd-tree or a brute search. This can heavily influence the search time, depending on the amount and size of the input (features and instances) this can influence the prediction time heavily but should not influence predictive accuracy. The previously mentioned k parameter is an influencer for prediction quality.\cite{KNN-k}
 
 \subsubsection{SDGClassifier}
-SDGClassifier is an incremental function to stochastically approximate the gradient descent of a loss or cost function \cite{SGDClass}. The default classifier to optimize is a linear SVM on its loss function. To fit the classifier it expects continious features with a mean of zero in a sparse setting. This makes the classifier sensitive to categorical data as it performs optimally with continious features. The iterative steps for calculation gradient descent are bounded by the inverse of the learning rate and a threshold value. The threshold value indicates what degree of slope indicates a near minimal or maxima. The learning rate is used to update the model in each iteration.
+SDGClassifier is an incremental function to stochastically approximate the gradient descent of a loss or cost function \cite{SGDClass}. The default classifier to optimize is a linear SVM on its loss function. To fit the classifier it expects continious features with a mean of zero in a sparse setting. This makes the classifier sensitive to categorical data as it performs optimally with continious features. The iterative steps for calculation gradient descent are bounded by the inverse of the learning rate and a threshold value. The threshold value indicates what degree of slope indicates a near minimal or maxima. The learning rate is used to update the model in each iteration. As the fitted functions are linear, if the input has mutliple classes a classifier predicts one class versus all other classes. 
 
 \subsubsection{AdaBoost}
 AdaBoost is an ensemble classifier that fits other classifiers and outputs the weighted results of those classifiers \cite{AdaBoost}. AdaBoost trains these other classifiers on previously misclassified results by increasing their influence this makes it heavily subjected to noisy data and outliers. The scikit-learn library uses the multi class AdaBoost-SAMME implementation from J. Zhu et al \cite{MadaB}. The solution of J. Zhu also solves the lack of multi-class solution of the weak learners (other classifiers) by extending the initial AdaBoost algorithm with a forward stage wise additive step. In this step a continual calculation of a loss function will output the prediction and in a two class case it reduces to the initial solution.
@@ -626,7 +626,7 @@ in figures \ref{fig:FeatManSlope1Log},\ref{fig:FeatManSlope1} and \ref{fig:FeatM
 	\includegraphics[
 	width=0.65\textwidth
 	]{images/scalability/Instances.png}
-	\caption{The dataset is reduced to a split of the initial dataset and then cross llidation is done on the reduced dataset. The lines are predictions}
+	\caption{The dataset is reduced to a split of the initial dataset and then cross validation is done on the reduced dataset. The lines are predictions}
 	\label{fig:Instances}
 \end{figure}
 
@@ -674,17 +674,17 @@ We consider here both random and duplcite features as they are both redundant.
 \end{figure}
 
 
-
+%TODO on hold asof 14/5 fault
 \textbf{RandomForestClassifier} RandomForestClassifier has one of the best predictive accuracies on the clean data sets. The decline however with added features is noticable steep. With duplicate features the decline is pretty steep. The added random features have less of an impact on the accuracy. A large part of the impact can be seen with the initial addition as that has the largest impact in comparison. As indicated in \ref{chapter312} RandomForestClassifier indicates that the random features have some importance in the predictions which only increases with more features, but less than the importance it indicates. The same holds for duplciate features which also gains feature importance with more duplicates.   \\
 
 \textbf{KNeighborsClassifier} The predictive accuracy of Knn is decent on the categorical datasets for both values of k. The downfall in quality however with random categorical values is hard, which is mostly due to inability to handle categorical features. If we look at the same datasets with added numerical categories there is even an increase in predictive accuracy.\ref{fig:predRedCatNum}.
 The duplicate features have in both cases of numerical and categorical datasets a near equal impact considering the different datasets. The random numerical features in the numerical datasets have a clear impact when they are added but only a slight decrease afterwards. This can be explained as the variability of the random features. A previous instances would have a chance to be close to its equal class neighbors but with the added dimensions of random features this closeness is shifted. This variances does not increase that much with more features as the odds of extreme cases still staying the same. An extreme case being a previous neighbors instance having the minimal value for all added value and the neighbors of equal class having all maximal values of the added class. \\
 
-\textbf{SGDClassifier} \\
+\textbf{SGDClassifier} The predictive accuracy of the SGDClassifier is the worst on the categorical datasets and one of the worst on the numerical datasets. This lack of initial performance is because of the clean datasets, of which it can hardly handle the categorical features. The robustness to random categorical features is also really bad and is only saved as it can hardly handle the normal categorical features. The duplicate categorical features have a less of an impact as they are more of the same the accuracy has less to lose. The robustness for numerical features is better, for duplicate features there is a slight decline similair to most of the other algorithms. The random numerical features however have nearly no impact on the predictive accuracy. With the stagewise steps of optimizing a cost function the SGDClassifier is really robust against random numerical features. The added random numerical features are clearly continious values which the SGDClassifier expects for its input. \\
 
-\textbf{AdaBoost} \\
+\textbf{AdaBoost} The predictive accuracy of unoptimized  AdaBoost is below average on both datasets. The handling of added features is however strong as it can handle both random numerical and categorical features with only a slight dip in accuracy with the introduction of these features. This behavior can be explained by the optimization of outliers Adaboost is focussed on. The added random features are so uniform that there is a clear lack of outliers to optimize on. The adaBoost has a harder time disregarding the duplicate features with an average robustness compared to the others. These duplicates have the same effect as the below average prediction of the original set. AdaBoost struggles to foucs on the outliers and so overfits on these  duplicate features.\\
 
-\textbf{SVC-rbf} \\
+\textbf{SVC-rbf} The predictive accuracy of SVC-rbf is great on the categorical dataset and average on the numerical dataset. The handling of the clean dataset with default settings is not fruitful. The robustness to the random categorical features is also bad. The variance within these categories is high and without tweaking the C parameter it can be expected to overfit to these features. For duplicate features the robustness  \\
 
 \textbf{GaussianNB} \\
 
